css/styles.css
/* Element Styling */

body {
    font-family: 'Montserrat';
}

h1 {
    font-family: 'Montserrat:900', sans-serif;
    font-weight: 900;
    font-size: 3.5rem;
    line-height: 1.5;
}

li {
    color: white;
}

h3 {
    font-family: 'Montserrat';
    font-size: 1.5rem;
    font-weight: bold;
}

p {
    color: #8f8f8f;
}


h2 {
    font-family: 'Montserrat';
    font-size: 3rem;
    line-height: 1.5;
    font-weight: bold;
}



/* Navigation Bar */
.navbar {
    padding: 0 0 4.5rem;
}

.navbar-dark .navbar-brand {
    color: white;
}

.navbar-brand {
    font-family: 'Ubuntu';
    font-size: 2.5rem;
    font-weight: bold;
}

.nav-item {
    padding: 0 15px;
}

.nav-link {
    font-size: 1.2rem;
    font-family: 'Montserrat';
    font-weight: lighter;
}


/* Download Buttons */

.download-button {
    margin: 5% 3% 5% 0;
}


/* Title Section Styling */


#title .container-fluid {
    padding: 3% 15% 7%;
    text-align: left;
}


.iphone {
    width: 60%;
    transform: rotate(25deg);
    position: absolute;
    right: 28%;
}

/* Features */

#features {
    padding: 7% 15%;
    background-color: white;
    position: relative;
    z-index: 1;
}

.feature-box {
    text-align: center;
    padding: 5%;
}

.icon {
    color: #ef8172;
    margin-bottom: 1rem;
}

.icon:hover {
    color: #ff4c68;
}

/* Testimonials */

#testimonials {
    padding: 5% 10%;
    text-align: center;
}

.testimonial-image {
    width: 10%;
    border-radius: 100%;
    margin: 20px;
}

#press {
    text-align: center;
    padding-bottom: 3%;
}

.press-logo {
    width: 15%;
    margin: 20px 20px 30px;
}

.carousel-item {
    padding: 7% 15%;
}

/* Pricing Section */

#pricing {
    padding: 100px;
    text-align: center;
}

.pricing-column {
    padding: 3% 2%;
}


/* Media Queries Styling */

@media (max-width: 1028px) {
    #title {
        text-align: center;
    }

    .iphone {
        position: static;
        transform: rotate(0);
    }
}

/* Call to Arms */
#cta {
    text-align: center;
    padding: 7% 15%;
}

.cta-head {
    font-size: 3.5rem;
    line-height: 1.5;
    font-family: 'Montserrat';
    font-weight: bold;
}

/* Footer */

#footer {
    text-align: center;
    padding: 7% 15%;
}

.footer-icon {
    margin: 20px 10px;
}

.copyright {
    padding-top: 10px;
}

/* Section Styling */

.colored-section {
    background-color: #ff4c68;
    color: #fff;
}

.white-section {
    background-color: #fff;
}

